--- a/styles/style.css
+++ b/styles/style.css
@@ -26,22 +26,22 @@ body {
   margin: 0 0 40px 0;
   text-align: center;
   color: white;
+  padding: 47px 150px 0 150px;
 }
 
 h1 {
   font-size: 72px;
   font-weight: bold;
+  text-align: center;
 }
-h1 .homepage {
-  padding: 47px 150px 0 150px;
-}
+
 h2 {
   font-size: 24px;
   font-weight: bold;
   margin: 0 350px;
   padding-bottom: 46px;
 }
-.about-section h2 {
+.contact-section h2 {
   margin: 0;
 }
 ul {
