--- a/styles/style.css
+++ b/styles/style.css
@@ -32,24 +32,52 @@ h1 {
   font-size: 72px;
   font-weight: bold;
   text-align: center;
+}
+.hero h1 {
   padding: 47px 150px 0 150px;
 }
-
 h2 {
-  font-size: 24px;
+  font-size: 36px;
   font-weight: bold;
-  margin: 0 350px;
-  padding-bottom: 46px;
 }
 .contact-section h2 {
   margin: 0;
 }
+
+h3 {
+  font-size: 24px;
+  font-weight: bold;
+}
+.hero h3 {
+  margin: 0 350px;
+  padding-bottom: 46px;
+}
+
 ul {
   list-style-type: none;
 }
 p {
   font-size: 28px;
   font-weight: bold;
+}
+
+.card-recipes {
+  margin-top: 30px;
+  border: none;
+}
+.step {
+  color: var(--step-color);
+}
+.ingredient {
+  border-bottom: dashed 1px #67d5d2;
+  padding: 10px 0;
+  text-align: justify;
+}
+.recipe-content {
+  font-size: 18px;
+  padding-left: 150px;
+  padding-right: 220px;
+  padding-bottom: 60px;
 }
 .contact-recources {
   color: var(--accent-color);
@@ -58,11 +86,6 @@ p {
   font-weight: bold;
   padding: 10px;
   margin-top: 15px;
-}
-
-.recepies {
-  margin-top: 30px;
-  border: none;
 }
 footer {
   font-size: 16px;
@@ -92,17 +115,28 @@ footer {
     font-size: 40px;
     padding: 10px 15px 0 15px;
   }
-
   h2 {
+    font-size: 26px;
+    padding: 5px;
+  }
+
+  h3 {
     font-size: 18px;
     padding: 0 15px 10px 15px;
   }
   h1,
-  h2 {
+  h2 h3 {
     margin: 0;
   }
   p {
     font-size: 20px;
+  }
+  .recipe-content {
+    font-size: 20px;
+    padding-left: 10px;
+    padding-right: 30px;
+    padding-bottom: 20px;
+    text-align: justify;
   }
   footer {
     font-size: 10px;
