Made about-page

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,9 +40,6 @@ h2 {
   font-size: 36px;
   font-weight: bold;
 }
-.contact-section h2 {
-  margin: 0;
-}
 
 h3 {
   font-size: 24px;
@@ -61,8 +58,7 @@ p {
   font-weight: bold;
 }
 
-.card-recipes {
-  margin-top: 30px;
+.card {
   border: none;
 }
 .step {
