--- a/styles/style.css
+++ b/styles/style.css
@@ -106,6 +106,14 @@ footer {
     background-size: cover;
     margin-bottom: 0;
   }
+  .hero h1 {
+    padding: 0;
+    padding-top: 8px;
+  }
+  .hero h3 {
+    margin: 0;
+    padding-bottom: 10px;
+  }
 
   h1 {
     font-size: 40px;
